cmake_minimum_required(VERSION 3.20)
project(test)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -pthread")
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(libraries/Game)
add_subdirectory(libraries/State)
add_subdirectory(libraries/GameState)
add_subdirectory(libraries/LostState)
add_subdirectory(libraries/Entity)
add_subdirectory(libraries/Character)
add_subdirectory(libraries/Collider)
add_subdirectory(libraries/Stone)
add_subdirectory(libraries/Tyan)
add_subdirectory(libraries/Guardian)
add_subdirectory(libraries/Bullet)
add_subdirectory(libraries/Button)
add_subdirectory(libraries/StateManager)
add_subdirectory(libraries/AssetManager)
add_subdirectory(libraries/MenuState)
add_subdirectory(libraries/PauseState)
add_subdirectory(libraries/GameContext)
add_subdirectory(libraries/utils)
add_subdirectory(libraries/Connecting)
add_subdirectory(libraries/LoadState)

enable_testing()
#add_executable(tests tests/tests.cpp)
#include_directories(${GTEST_INCLUDE_DIRS})
#target_link_libraries(tests ${GTEST_LIBRARIES} Game State Entity GameState LostState
#                        Character Collider Stone Tyan Guardian Bullet Button)

add_executable(main main.cpp)
target_link_libraries(main PUBLIC Game)
